--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,8 @@
 <item android:id="@+id/file" android:title="File" >
     <!-- "file" submenu -->
     <menu>
-        <item android:id="@+id/create_new"
-            android:title="New" />
-        <item android:id="@+id/open"
-            android:title="Open" />
+        <item android:id="@+id/create_new" android:title="New" />
+        <item android:id="@+id/open" android:title="Open" />
     </menu>
 </item>
 </menu>
